--- a/app/views/songs/_search.html.erb
+++ b/app/views/songs/_search.html.erb
@@ -1,10 +1,12 @@
 <h2>Find a Song</h2>
 
-<%= form_tag songs_path, :method => 'get', :class => 'pure-form' do %>
-  <%= text_field_tag :query, params[:query] || '',
-    :autocomplete => 'off',
-    :placeholder => 'Enter query',
-    :id => 'song_search_field'
-  %>
-  <%= submit_tag 'Search', :class => 'pure-button pure-button-primary' %>
+<%= form_tag songs_path, method: 'get' do %>
+  <div class="input-group input-inline">
+    <%= text_field_tag :query, params[:query] || '',
+      autocomplete: 'off',
+      placeholder: 'Enter query',
+      class: 'form-input'
+    %>
+    <%= submit_tag 'Search', class: 'btn btn-primary input-group-btn' %>
+  </div>
 <% end %>
