--- a/app/views/setlists/edit.html.erb
+++ b/app/views/setlists/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="header">
-  <h1>Edit Setlist</h1>
-</div>
+<% content_for(:title, 'Edit Setlist') %>
 
-<div class="content">
-  <%= render 'form' %>
+<div class="columns">
+  <div class="column">
+    <%= render 'form' %>
+  </div>
 </div>
