--- a/app/views/setlists/show.html.erb
+++ b/app/views/setlists/show.html.erb
@@ -1,108 +1,102 @@
-<div class="header">
-  <h1><%= @setlist.title %></h1>
+<% content_for(:title, @setlist.title) %>
+
+<div class="columns">
+  <div class="column col-9">
+    <% if !@setlist.notes.empty? %>
+      <h2>Notes</h2>
+      <div style="white-space: pre;"><%= @setlist.notes %></div>
+    <% end %>
+  </div>
+
+  <div class="column col-3">
+    <%= link_to 'Edit', edit_setlist_path(@setlist), class: 'btn btn-primary' %>
+  </div>
 </div>
 
-<div class="content">
-  <div class="pure-g">
-    <div class="pure-u-2-3">
-      <% if !@setlist.notes.empty? %>
-        <div>
-          <h2>Notes</h2>
-          <div style="white-space: pre;"><%= @setlist.notes %></div>
-        </div>
-      <% end %>
-    </div>
+<div class="columns">
+  <div class="column">
+    <h2>Songs</h2>
 
-    <div class="pure-u-1-3">
-      <%= link_to 'Edit', edit_setlist_path(@setlist), class: 'pure-button pure-button-primary' %>
-    </div>
-
-    <div class="pure-u-1">
-      <h2>Songs</h2>
-
-      <table class="pure-table pure-table-bordered">
-        <thead>
-          <tr>
-            <th>
-              Key
-            </th>
-
-            <th>
-              Song
-            </th>
-
-            <th>
-            </th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @setlist.items.find_each do |item| %>
+    <div class="card">
+      <div class="card-body">
+        <table class="table">
+          <thead>
             <tr>
-              <td>
-                <%= form_tag setlist_update_song_path(setlist_id: @setlist.id, song_id: item.id), class: 'pure-form', method: :get do %>
-                <%= hidden_field_tag :song_id, item.id %>
-                  <%= select_tag(:key, options_for_select([
-                    ['C major / A minor', 'C'],
-                    ['Db major / Bb minor', 'Db'],
-                    ['D major / B minor', 'D'],
-                    ['Eb major / C minor', 'Eb'],
-                    ['E major / C# minor', 'E'],
-                    ['F major / D minor', 'F'],
-                    ['Gb major / Eb minor', 'Gb'],
-                    ['G major / E minor', 'G'],
-                    ['Ab major / F minor', 'Ab'],
-                    ['A major / F# minor', 'A'],
-                    ['Bb major / G minor', 'Bb'],
-                    ['B major / G# minor', 'B'],
-                  ], item.key), :onchange => 'this.form.submit()') %>
-                <% end %>
-              </td>
-
-              <td>
-                <%= link_to item.song.full_name,
-                  song_path(item.song_id, :key => item.key),
-                  :class => 'fancy-link'
-                %>
-              </td>
-
-              <td>
-                <%= link_to 'Remove',
-                  setlist_songs_path(:setlist_id => @setlist.id, :id => item.id),
-                  :method => 'delete',
-                  :class => 'pure-button pure-button-danger',
-                  :data => {
-                    :confirm =>
-                      "Are you sure you want to remove \"#{item.song.title}\" from the setlist?"
-                  }
-                %>
-              </td>
+              <th width="25%">Key</th>
+              <th>Song</th>
+              <th width="10%"></th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+
+          <tbody>
+            <% @setlist.items.find_each do |item| %>
+              <tr>
+                <td>
+                  <%= form_tag setlist_update_song_path(setlist_id: @setlist.id, song_id: item.id), class: 'pure-form', method: :get do %>
+                  <%= hidden_field_tag :song_id, item.id %>
+                    <%= select_tag(:key, options_for_select([
+                      ['C major / A minor', 'C'],
+                      ['Db major / Bb minor', 'Db'],
+                      ['D major / B minor', 'D'],
+                      ['Eb major / C minor', 'Eb'],
+                      ['E major / C# minor', 'E'],
+                      ['F major / D minor', 'F'],
+                      ['Gb major / Eb minor', 'Gb'],
+                      ['G major / E minor', 'G'],
+                      ['Ab major / F minor', 'Ab'],
+                      ['A major / F# minor', 'A'],
+                      ['Bb major / G minor', 'Bb'],
+                      ['B major / G# minor', 'B'],
+                    ], item.key), onchange: 'this.form.submit()', class: 'form-select') %>
+                  <% end %>
+                </td>
+
+                <td>
+                  <%= link_to item.song.decorate(:name), song_path(id: item.song_id, key: item.key) %>
+                </td>
+
+                <td>
+                  <%= link_to 'Remove',
+                    setlist_songs_path(setlist_id: @setlist.id, id: item.id),
+                    method: 'delete',
+                    class: 'btn btn-error',
+                    data: { confirm: "Are you sure you want to remove '#{item.song.decorate :name}' from the setlist?" }
+                  %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
+</div>
 
-    <div class="pure-u-1">
-      <h2>Add a Song</h2>
+<div class="columns">
+  <div class="column">
+    <h2>Add a Song</h2>
 
-      <%= form_tag setlist_search_songs_path(@setlist),
-        method: 'post',
-        remote: true,
-        class: 'pure-form custom-form' do
-      %>
+    <%= form_tag setlist_search_songs_path(@setlist),
+      method: 'post',
+      remote: true,
+      class: 'pure-form custom-form' do
+    %>
 
+      <div class="input-group input-inline">
         <%= text_field_tag :query, '',
           autocomplete: 'off',
-          placeholder: 'Enter title or artist'
+          placeholder: 'Enter title or artist',
+          class: 'form-input'
         %>
 
-        <%= submit_tag 'Search', class: 'pure-button pure-button-primary' %>
-      <% end %>
-    </div>
+        <%= submit_tag 'Search', class: 'btn btn-primary input-group-btn' %>
+      </div>
+    <% end %>
+  </div>
+</div>
 
-    <div class="pure-u-1">
-      <ul id="search-results"></ul>
-    </div>
+<div class="columns">
+  <div class="column col-6">
+    <ul id="search-results" class="menu" style="display: none;"></ul>
   </div>
 </div>
