--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="header">
-  <h1>Editing "<%= @song.title %>"</h1>
-</div>
+<% content_for(:title, 'Editing Song') %>
 
-<div class="content">
-  <%= render 'form' %>
+<div class="columns">
+  <div class="column">
+    <%= render 'form' %>
+  </div>
 </div>
