--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,44 +1,46 @@
-<div class="header">
-  <h1><%= @song.decorate :name %></h1>
-</div>
+<% content_for(:title, @song.decorate(:name)) %>
 
-<div class="content">
-  <div class="pure-g">
-    <div class="pure-u-2-3" id="youtube-video">
-      <%= embed_youtube(@song.youtube_url) %>
-    </div>
+<div class="columns">
+  <div class="column col-9" id="youtube-video">
+    <%= embed_youtube(@song.youtube_url) %>
+  </div>
 
-    <div class="pure-u-1-3" id="toolbox">
-      <p>
-        <%= link_to 'Edit Song', edit_song_path(@song), :class => 'pure-button pure-button-primary' %>
+  <div class="column col-3" id="toolbox">
+    <p>
+      <%= link_to 'Edit Song', edit_song_path(@song), class: 'btn btn-primary' %>
 
-        <span id="print_song_button" class="pure-button pure-button-primary">
-          Print Song
-        </span>
-      </p>
+      <span id="print_song_button" class="btn btn-primary">
+        Print Song
+      </span>
+    </p>
 
-      <%= form_for @song, method: 'get', html: { class: 'pure-form pure-form-stacked' } do |f| %>
-        <%= f.label :key %>
+    <%= form_for @song, method: 'get', html: { class: 'pure-form pure-form-stacked' } do |f| %>
+
+      <div class="form-group">
+        <%= f.label :key, class: 'form-label' %>
 
         <%=
           select_tag(
             :key,
             options_for_select(song_keys, @song.key),
             style: 'width: 100%',
-            onchange: %q!this.form.querySelector('input[type="submit"]').click()!
+            onchange: %q!this.form.querySelector('input[type="submit"]').click()!,
+            class: 'form-select'
           )
         %>
 
         <%= f.submit hidden: true %>
-      <% end %>
+      </div>
+    <% end %>
 
-      <p>
-        <strong>Views:</strong> <%= @song.views %>
-      </p>
-    </div>
+    <p>
+      <strong>Views:</strong> <%= @song.views %>
+    </p>
+  </div>
+</div>
 
-    <div class="pure-u-1-1">
-      <%= @song_html.html_safe %>
-    </div>
+<div class="columns">
+  <div class="column">
+    <%= @song_html.html_safe %>
   </div>
 </div>
