--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -1,18 +1,26 @@
-<div class="header">
-  <h1>Settings</h1>
-</div>
+<% content_for(:title, 'Settings') %>
 
-<div class="content">
-  <%= form_for current_user, url: settings_path, html: { class: 'pure-form pure-form-stacked' } do |f| %>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+<div class="columns">
+  <div class="column col-4">
+    <%= form_for current_user, url: settings_path do |f| %>
+      <div class="form-group">
+        <%= f.label :username, class: 'form-label' %>
+        <%= f.text_field :username, class: 'form-input' %>
+      </div>
 
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+      <div class="form-group">
+        <%= f.label :first_name, class: 'form-label' %>
+        <%= f.text_field :first_name, class: 'form-input' %>
+      </div>
 
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
+      <div class="form-group">
+        <%= f.label :last_name, class: 'form-label' %>
+        <%= f.text_field :last_name, class: 'form-input' %>
+      </div>
 
-    <%= f.submit 'Update Settings', class: 'pure-button pure-button-primary' %>
-  <% end %>
+      <div class="form-group">
+        <%= f.submit 'Update Settings', class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
 </div>
