--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,11 +1,12 @@
 <% content_for(:title, 'About') %>
 
 <div class="columns">
-  <div class="column center-text">
+  <div class="column has-text-centered">
     <%= image_tag '1vasari.jpg',
       alt: 'Image of 1vasari',
       id: 'profile_picture',
-      style: 'margin: 0 auto;'
+      style: 'margin: 0 auto;',
+      class: 'image'
     %>
 
     <p>
